--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 <div class="box" style="background: url(images/home1.jpg) no-repeat;">
                 <div class="content">
                     <span>never stop</span>
-                    <h3>exploring</h3>
-                    <p>Travel.com offers best deals on India tour packages.</p>
+                    <h3>exploringg</h3>
+                    <p>Travel.com offers best deals on Egypt tours packages.</p>
                     <a href="#category" class="btn">get started</a>
                 </div>
                 </div>  
