--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
     
             <div class="box">
                 <img src="images/category-1.jpg" alt="BungeeJumpingImg">
-                <h3>bungee jump</h3>
+                <h3>Bungee jump</h3>
                 <p>Bungee jumping is an activity that involves a person jumping from a great height while connected to a large elastic cord.</p>
                 <a href="https://en.wikipedia.org/wiki/Bungee_jumping" class="btn">read more</a>
             </div>
     
             <div class="box">
                 <img src="images/category-2.jpg" alt="ZipLinesImg">
-                <h3>zip lines</h3>
+                <h3>Zip lines</h3>
                 <p>A zip-line, zip line, zip-wire, or flying fox is a pulley suspended on a cable, usually made of stainless steel, mounted on a slope.</p>
                 <a href="https://en.wikipedia.org/wiki/Zip_line" class="btn">read more</a>
             </div>
