--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <a href="#" class="logo"><i class="fas fa-hiking"></i> travel.com</a>
         <nav class="navbar">
             <div id="nav-close" class="fas fa-times"></div>
-            <a href="#home">home</a>
+            <a href="#home">Home</a>
             <a href="#category">Adventures</a>
-            <a href="#packages">packages</a>
-            <a href="#contact">contact</a>
+            <a href="#packages">Packages</a>
+            <a href="#contact">Contact</a>
         </nav>
         <div class="icons">
             <div id="menu-btn" class="fas fa-bars"></div> 
@@ -41,8 +41,8 @@
            
                 <div class="box" style="background: url(images/home1.jpg) no-repeat;">
                 <div class="content">
-                    <span>never stop</span>
-                    <h3>exploringg</h3>
+                    <span>Never stop</span>
+                    <h3>Exploringg</h3>
                     <p>Travel.com offers best deals on Egypt tours packages.</p>
                     <a href="#category" class="btn">get started</a>
                 </div>
