--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
            
                 <div class="box" style="background: url(images/home1.jpg) no-repeat;">
                 <div class="content">
-                    <span>Never stop</span>
+                    <span>Never Stop</span>
                     <h3>Exploringg</h3>
-                    <p>Travel.com offers best deals on Egypt tours packages.</p>
+                    <p>Travel.com Offers best deals on Egypt tours packages.</p>
                     <a href="#category" class="btn">get started</a>
                 </div>
                 </div>  
@@ -74,7 +74,7 @@
             <div class="box">
                 <img src="images/category-3.jpg" alt="canoeingImg">
                 <h3>Canoeing</h3>
-                <p>Canoeing is an activity which involves paddling a canoe with a single-bladed paddle.</p>
+                <p>Canoeing is an activity which involves paddling a Canoe with a single-bladed paddle.</p>
                 <a href="https://en.wikipedia.org/wiki/Canoeing" class="btn">read more</a>
             </div>
     
