--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           </div>
           <div class="msg">
             <textarea placeholder="Message" name="message"></textarea> <br>
-            <div class="btn1"><button type="submit">send <i class="uil uil-message"></i></div>
+            <div class="btn1"><button type="submit">Send <i class="uil uil-message"></i></div>
           </div>
           </form>
         </div>
