--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="box">
                 <img src="images/category-1.jpg" alt="BungeeJumpingImg">
                 <h3>Bungee jump</h3>
-                <p>Bungee jumping is an activity that involves a person jumping from a great height while connected to a large elastic cord.</p>
+                <p>Bungee jumping is an activity that involves a person Jumping from a great height while connected to a large elastic cord.</p>
                 <a href="https://en.wikipedia.org/wiki/Bungee_jumping" class="btn">read more</a>
             </div>
     
