--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="box">
                 <img src="images/category-3.jpg" alt="canoeingImg">
                 <h3>Canoeing</h3>
-                <p>Canoeing is an activity which involves paddling a  with a single-bladed paddle.</p>
+                <p>Canoeing is an Activity which involves paddling a  with a single-bladed paddle.</p>
                 <a href="https://en.wikipedia.org/wiki/Canoeing" class="btn">read more</a>
             </div>
     
