--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="box">
                 <img src="images/category-2.jpg" alt="ZipLinesImg">
                 <h3>Zip lines</h3>
-                <p>A zip-line, zip line, zip-wire, or flying fox is a pulley suspended on a cable, usually made of stainless steel, mounted on a slope.</p>
+                <p>A zip-line, zip line, Zip-wire, or flying fox is a pulley suspended on a cable, usually made of stainless steel, mounted on a slope.</p>
                 <a href="https://en.wikipedia.org/wiki/Zip_line" class="btn">read more</a>
             </div>
     
