--- a/index.html
+++ b/index.html
@@ -195,6 +195,11 @@
         </div> 
     
     </section>
+
+
+    <section class="footer">
+
+    </section>
     <script src="js/main.js"></script>
     </body>
 
