--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
                 <a href="https://github.com/Yash-srivastav16"> <i class="fab fa-github"></i> github </a>
             </div>
         </div>
+        <div class="credit">created by <span>yash srivastav</span> | all rights reserved!</div>
     </section>
     <script src="js/main.js"></script>
     </body>
